kubernetes/k3s/apps/misc/ingext/chart/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: s3
    - protocol: TCP
      port: 9001
      targetPort: 9001
      name: ui
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: 10.0.0.6
    ports:
      - port: 9000
        name: s3
      - port: 9001
        name: ui
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
  labels:
    traefik-instance: internal
spec:
  hostnames:
    - s3.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: unraid
          port: 9000
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-ui
  labels:
    traefik-instance: internal
spec:
  hostnames:
    - minio.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: unraid
          port: 9001
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
