kubernetes/k3s/apps/misc/ingext/chart/unraid.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unraid
spec:
  hostnames:
    - unraid.plexmox.com
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unraid
          port: 80
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateways
